<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Millionaire</string>
    <string name="welcome">Вы азартны? Хотите проверить свою эрудицию?</string>
    <string name="start_game">Начать игру</string>
    <string name="exit_game">Выход</string>
    <string name="rules">Правила игры: Нужно правильно ответить на 15 вопросов, к каждому вопросу предлагается 4 варианта ответа. Во время игры можно пользоваться подсказками - это помощь зала: все зрители голосуют за правильный ответ и результат показывается участнику, он может согласится с мнением зала или выбрать другой вариант ответа; следующая подсказака - звонок другу: в течение 60 секунд участник может позвонить по любому номеру и задать вопрос, на который он затрудняется ответить; и последняя подсказка - 50 на 50 - воспользовавшись этой подсказкой, компьютер убирает 2 неверных варианта ответа, участнику остается выбрать только между двумя вариантами.</string>
    <string name="game_over">Игра закончена</string>
    <string name="start_new_game">Новая игра</string>
    <string name="your_money">Ваш выигрыш составил</string>
    <string name="yor_lose">Полная неудача. Ваш выигрыш</string>
    <string name="yor_millionaire">Поздравляем! Вы победили. Ваш выигрыш</string>
</resources>
