<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@drawable/bg2">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_game"
                android:id="@+id/button"
                android:layout_gravity="center"
                android:background="@drawable/but1"
                android:layout_marginRight="20dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit_game"
                android:id="@+id/button1"
                android:layout_gravity="center"
                android:background="@drawable/but3"
                android:textColor="@android:color/darker_gray"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rules"
            android:id="@+id/textView"
            android:layout_margin="5dp"
            android:textColor="@android:color/white"
            android:layout_gravity="bottom|right"
            android:gravity="bottom"
            android:background="@android:color/black"/>

    </LinearLayout>

</LinearLayout>

