<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@drawable/bg2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_money"
        android:id="@+id/message"
        android:gravity="fill_horizontal"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1000000"
        android:id="@+id/sum"
        android:layout_gravity="center_horizontal"
        android:textColor="#f5d723"
        android:textStyle="bold"
        android:textSize="30dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_gravity="center">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_new_game"
            android:id="@+id/new_game"
            android:layout_gravity="center"
            android:background="@drawable/but1"
            android:layout_marginRight="20dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit_game"
            android:id="@+id/exit"
            android:layout_gravity="center"
            android:background="@drawable/but3"
            android:textColor="@android:color/darker_gray"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>


</LinearLayout>

